<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip">
	<RelativeLayout android:id="@+id/editPanel"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<EditText android:id="@+id/sEditText" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:inputType="text">
		</EditText>
		<CheckBox android:id="@+id/cbxHexSend" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/hexsend"
			android:layout_below="@id/sEditText">
		</CheckBox>
		<CheckBox android:id="@+id/cbxNewLine" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/newline"
			android:layout_below="@id/sEditText" android:layout_toRightOf="@id/cbxHexSend" android:layout_alignBottom="@id/cbxHexSend">
		</CheckBox>
		<CheckBox android:id="@+id/cbxHexView" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/hexview"
			android:layout_below="@id/cbxHexSend"></CheckBox>
		<Button android:id="@+id/btnClear" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/clear"
			android:layout_below="@id/cbxNewLine" android:onClick="onButtonClickclear" android:layout_alignLeft="@id/cbxNewLine">
		</Button>
		<Button android:id="@+id/btnSend" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:text="@string/send"
			android:onClick="onButtonClicksend" android:layout_below="@id/cbxNewLine"
			android:layout_toRightOf="@id/btnClear">
		</Button>

	</RelativeLayout>
	<ScrollView android:id="@+id/scrollView"
		android:layout_width="fill_parent" android:layout_height="match_parent"
		android:layout_above="@id/editPanel">
		<TextView android:id="@+id/sTextView" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:layout_below="@+id/sEditText">
		</TextView>
	</ScrollView>
</RelativeLayout>
