<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="fill_parent">
	<ImageView android:id="@+id/logo" android:src="@drawable/logo"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="50dip">
	</ImageView>
	<ScrollView android:id="@+id/scrollView"
		android:layout_width="fill_parent" android:layout_height="match_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent">
			<TextView android:text="@string/about_us"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<TextView android:text="@string/about1"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:textSize="12dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<TextView android:text="@string/about2" android:id="@+id/about2" android:autoLink="web"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip" 
				android:textSize="12dip" android:layout_width="fill_parent" android:clickable="false"
				android:layout_height="wrap_content">
			</TextView>
			<TextView android:text="@string/about3" android:id="@+id/about3" android:autoLink="email"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:textSize="12dip" android:layout_width="fill_parent" android:clickable="false"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
